deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deployment-package-factory
  labels:
    app.kubernetes.io/name: deployment-package-factory
